[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/slime_damage.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/guns/slimegun/slime-ball.aseprite" type="SpriteFrames" id=2]
[ext_resource path="res://entities/bullets/slime_ball.gd" type="Script" id=3]
[ext_resource path="res://entities/facing_sprite.gd" type="Script" id=5]

[sub_resource type="SphereShape" id=1]
radius = 0.31574

[node name="slime_ball" type="RigidBody" groups=[
"bullet",
"slime_ball",
]]
collision_layer = 2
contacts_reported = 1
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite3D" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
opacity = 0.85
billboard = 2
frames = ExtResource( 2 )
animation = "regular"
script = ExtResource( 5 )

[node name="slime_damage" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="." to="." method="_on_slime_ball_body_entered"]
